src/test/deca/context/valid/sansObjet/declFloatInit.deca
// Description:
//   Déclaration d'un float avec son Initialisation
//
// Resultats:
//
//
// Historique:
//    cree le 13/01/2020

{
      float b = 0.5;
}
