src/test/deca/context/invalid/class/42_field_assign.deca
// Description:
//    Affectation d'un float dans un champ de type int
//
// Resultats:
//    undefined field
// 
// Historique:
//    cree le 01/01/2016

class A {
	int a;
}

{
	A a;
	float b;
	a.a = b;
}

